--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ typings/
 # Optional npm cache directory
 .npm
 .yarn
+.yarn.lock
 
 # Optional eslint cache
 .eslintcache
@@ -61,3 +62,7 @@ typings/
 
 # dotenv environment variables file
 .env
+
+# also hide this file
+# .gitignore
+# .git
