--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "youtube-clone",
   "version": "0.1.0",
+  "homepage": "https://ayush-dedhia25.github.io/youtubeClone",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -18,6 +19,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
